name:                protobuf-solidity
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/protobuf-solidity#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Convert
                     , Control.Monad.Result
                     , Control.Monad.Resultant
                     , Decode
                     , Encode
                     , Generator
                     , Library
                     , Types
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , extra
                     , filepath
                     , hprotoc
                     , optparse-applicative
                     , protocol-buffers
                     , protocol-buffers-descriptor
                     , split
                     , template
                     , template-haskell
                     , text

executable solpb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , extra
                     , filepath
                     , hprotoc
                     , optparse-applicative
                     , protocol-buffers
                     , protocol-buffers-descriptor
                     , split
                     , template
                     , template-haskell
                     , text

test-suite solpb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , bits-bytestring
                     , containers
                     , cryptonite
                     , directory
                     , hprotoc
                     , shelly
                     , text
                     , protobuf-solidity
                     , protocol-buffers
                     , protocol-buffers-descriptor

